src/test/ui/proc-macro/resolve-error.stderr
error: cannot find macro `bang_proc_macrp` in this scope
  --> $DIR/resolve-error.rs:60:5
   |
LL |     bang_proc_macrp!();
   |     ^^^^^^^^^^^^^^^ help: did you mean `bang_proc_macro`? (a similarly named macro)
   |
  ::: $DIR/auxiliary/test-macros.rs:15:1
   |
LL | pub fn empty(_: TokenStream) -> TokenStream {
   | ------------------------------------------- similarly named macro `bang_proc_macro` defined here

error: cannot find macro `Dlona` in this scope
  --> $DIR/resolve-error.rs:57:5
   |
LL |     Dlona!();
   |     ^^^^^

error: cannot find macro `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:54:5
   |
LL | macro_rules! attr_proc_mac {
   | -------------------------- similarly named macro `attr_proc_mac` defined here
...
LL |     attr_proc_macra!();
   |     ^^^^^^^^^^^^^^^ help: did you mean `attr_proc_mac`? (a similarly named macro)

error: cannot find macro `FooWithLongNama` in this scope
  --> $DIR/resolve-error.rs:51:5
   |
LL | macro_rules! FooWithLongNam {
   | --------------------------- similarly named macro `FooWithLongNam` defined here
...
LL |     FooWithLongNama!();
   |     ^^^^^^^^^^^^^^^ help: did you mean `FooWithLongNam`? (a similarly named macro)

error: cannot find derive macro `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:45:10
   |
LL | #[derive(attr_proc_macra)]
   |          ^^^^^^^^^^^^^^^

error: cannot find derive macro `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:45:10
   |
LL | #[derive(attr_proc_macra)]
   |          ^^^^^^^^^^^^^^^

error: cannot find derive macro `Dlona` in this scope
  --> $DIR/resolve-error.rs:40:10
   |
LL | #[derive(Dlona)]
   |          ^^^^^ help: did you mean `Clona`? (a similarly named derive macro)
   |
  ::: $DIR/auxiliary/derive-clona.rs:11:1
   |
LL | pub fn derive_clonea(input: TokenStream) -> TokenStream {
   | ------------------------------------------------------- similarly named derive macro `Clona` defined here

error: cannot find derive macro `Dlona` in this scope
  --> $DIR/resolve-error.rs:40:10
   |
LL | #[derive(Dlona)]
   |          ^^^^^ help: did you mean `Clona`? (a similarly named derive macro)
   |
  ::: $DIR/auxiliary/derive-clona.rs:11:1
   |
LL | pub fn derive_clonea(input: TokenStream) -> TokenStream {
   | ------------------------------------------------------- similarly named derive macro `Clona` defined here

error: cannot find derive macro `Dlone` in this scope
  --> $DIR/resolve-error.rs:35:10
   |
LL | #[derive(Dlone)]
   |          ^^^^^ help: did you mean `Clone`? (a similarly named derive macro)
   |
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL | pub macro Clone($item:item) {
   | --------------------------- similarly named derive macro `Clone` defined here

error: cannot find derive macro `Dlone` in this scope
  --> $DIR/resolve-error.rs:35:10
   |
LL | #[derive(Dlone)]
   |          ^^^^^ help: did you mean `Clone`? (a similarly named derive macro)
   |
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL | pub macro Clone($item:item) {
   | --------------------------- similarly named derive macro `Clone` defined here

error: cannot find attribute `FooWithLongNan` in this scope
  --> $DIR/resolve-error.rs:32:3
   |
LL | #[FooWithLongNan]
   |   ^^^^^^^^^^^^^^

error: cannot find attribute `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:28:3
   |
LL | #[attr_proc_macra]
   |   ^^^^^^^^^^^^^^^ help: did you mean `attr_proc_macro`? (a similarly named attribute macro)
   |
  ::: $DIR/auxiliary/test-macros.rs:20:1
   |
LL | pub fn empty_attr(_: TokenStream, _: TokenStream) -> TokenStream {
   | ---------------------------------------------------------------- similarly named attribute macro `attr_proc_macro` defined here

error: cannot find derive macro `FooWithLongNan` in this scope
  --> $DIR/resolve-error.rs:22:10
   |
LL | #[derive(FooWithLongNan)]
   |          ^^^^^^^^^^^^^^ help: did you mean `FooWithLongName`? (a similarly named derive macro)
   |
  ::: $DIR/auxiliary/derive-foo.rs:11:1
   |
LL | pub fn derive_foo(input: TokenStream) -> TokenStream {
   | ---------------------------------------------------- similarly named derive macro `FooWithLongName` defined here

error: cannot find derive macro `FooWithLongNan` in this scope
  --> $DIR/resolve-error.rs:22:10
   |
LL | #[derive(FooWithLongNan)]
   |          ^^^^^^^^^^^^^^ help: did you mean `FooWithLongName`? (a similarly named derive macro)
   |
  ::: $DIR/auxiliary/derive-foo.rs:11:1
   |
LL | pub fn derive_foo(input: TokenStream) -> TokenStream {
   | ---------------------------------------------------- similarly named derive macro `FooWithLongName` defined here

error: aborting due to 14 previous errors

